--- a/styles.css
+++ b/styles.css
@@ -25,13 +25,16 @@ body {
     margin: 0 auto;
     text-align: center;
     width: 95%;
+    z-index: 5;
 }
 .apple {
     background-image: url("Images/apple-icon.jpg");
-    background-size: 40px 40px;
+    background-size: 25px 25px;
     background-repeat: no-repeat;
+    z-index: 10;
 }
 .nav-list li {
+    background-image: linear-gradient(rgb(177, 174, 174), rgb(85, 84, 84) 50%);
     border: 1px solid purple;
     display: inline-block;
     color: white;
