--- a/styles.css
+++ b/styles.css
@@ -19,18 +19,21 @@ body {
 }
 .nav-list {
     border: 1px solid blue;
+    border-radius: 4px;
+    box-shadow: rgba(0,0,0,0.3) 0 1px 2px;
     display: flex;
     flex-direction: row;
+    height: 36px;
     padding: 0;
     margin: 0 auto;
     text-align: center;
-    width: 95%;
+    width: 97%;
     z-index: 5;
 }
 .nav-img {
-    height: 60%;
+    height: 98%;
     text-align: center;
-    width: 25%;
+    width: 21%;
 }
 .apple {
     background-image: url("Images/apple-icon.jpg");
@@ -47,6 +50,16 @@ body {
     padding-top: 7px;
     padding-bottom: 7px;
     width: 14%;
+}
+.search-bar {
+    background: none;
+    background-color: rgba(255,255,255,.1);
+    border: 0 none;
+    border-radius: 12px;
+    box-shadow: rgba(0, 0, 0, 0.6) 0 2px 1px inset, 
+        rgba(255, 255, 255, 0.2) 0 1px 0;
+    height: 84%;
+    width: 80%;
 }
 
 /* This is the main text area located between the navbar and the mid-section */
