--- a/styles.css
+++ b/styles.css
@@ -127,6 +127,7 @@ footer {
     bottom: 25px;
     color: #6e6e6e;
     font-size: 0.75em;
+    line-height: 1.2;
     margin: 0 auto;
     margin-top: 1.5%;
     position: relative;
@@ -148,20 +149,27 @@ footer a {
 }
 .ftr-1 ul {
     list-style: none;
+    margin-top: 2.17%;
     padding-left: 0%;
 }
 .ftr-1 ul li {
-    border-right: 1px solid rgba(194, 191, 191, 0.966);
     font-size: 1em;
     display: inline;
     padding-left: 1%;
     padding-right: 1%;
 }
-.ftr-1 ul li img {
-    height: 10px;
-    width: 10px;
+.list-border {
+    border-right: 1px solid rgba(194, 191, 191, 0.966);
 }
-.ftr-flag {border-right: none;}
+.ftr-flag {
+    display: inline-block;
+    vertical-align: middle;
+}
+.ftr-flag img {
+    height: 14px;
+    position: absolute;
+    width: 14px;
+}
 .ftr-2 {
     clear: left;
     margin-left: 5%;
